# z-rad

./: .gitignore  .jscpd.json  Features_readme.txt  LICENSE  README.md  README.rst  config.json  feature_names.xlsx  generate_executable.py  main.py  matrix_aggregation_methods.txt  pip.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  z_description.txt
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  python-lint.yml  test.yml
docs/: conf.py  filtering.rst  ibsi_validation.rst  index.rst  installation.rst  preprocessing.rst  quickstart_api.rst  quickstart_gui.rst  radiomics.rst  requirements.txt  troubleshooting.rst
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst  module.rst
docs/developer/: building_docs.rst  ci.rst  code_quality.rst  contributing.rst  development_environment.rst  index.rst  release_process.rst  testing.rst
docs/examples/: api_workflow.rst  gui_filtering.rst  gui_preprocessing.rst  gui_radiomics.rst  index.rst
docs/ibsi/: index.rst
docs/logos/: icon.icns
docs/project/: index.rst  release_notes.rst
docs/reference/: _generate_api.rst  batch.rst  filtering.rst  image.rst  index.rst  preprocessing.rst  radiomics.rst
docs/reference/api/: index.rst
docs/user/: api_quickstart.rst  data_structure.rst  discretization_guidelines.rst  filtering.rst  gui_quickstart.rst  gui_workflows.rst  index.rst  installation.rst  preprocessing.rst  radiomics.rst  resegmentation_guidelines.rst  troubleshooting.rst  visualization.rst
docs/user/examples/: gui_workflow.rst
documentation/: API ZRAD.ipynb  Configure HD-BET.docx  Z-Rad API.ipynb  feature_aggregation_methods.txt  feature_names.xlsx  pip.ini
gui/: prep_tab.py  toolbox_gui.py
input/: last_saved_user_prep_input.json
logic/: preprocessing.py
tests/: conftest.py  test_IBSI.py  test_IBSI_I.py  test_batch_filtering.py  test_batch_preprocessing.py  test_batch_radiomics.py  test_dicom.py  test_filtering.py  test_gui_popups.py  test_ibsi_1.py  test_ibsi_2.py  test_preprocessing.py  test_radiomics.py
tests/data/: README.md  ibsi_1_reference_values.xlsx  ibsi_1_reference_values_config_A.csv  ibsi_1_reference_values_config_B.csv  ibsi_1_reference_values_config_C.csv  ibsi_1_reference_values_config_D.csv  ibsi_1_reference_values_config_E.csv  ibsi_1_reference_values_digital_phantom.csv  ibsi_2_reference_values.csv
zrad/: .spyderworkspace  LocRadSlice.py  LocRadTexture.py  LocalRadiomicsGUI.py  Optimizer.py  ROImatrix.py  ROImatrix_nifti.py  __init__.py  check.py  config.default.txt  config.txt  config_hd_bet.py  exception.py  export.py  exportExcel.py  features2d.py  generate_executable.py  image.py  lymph_nodes.py  main.py  main_texture.py  main_texture.py.rej  main_texture_ct.py  main_texture_ctp.py  main_texture_ivim.py  main_texture_mr.py  main_texture_pet.py  myinfo.py  normalization.py  panel.py  panel_radiomics.py  panel_radiomics.py.rej  panel_resize.py  read.py  renamePatientName.py  resize_dicom.py  resize_interpolate_roi.py  resize_nifti.py  resize_shape - Copy.py  resize_shape.py  (+16 more)
zrad/batch/: __init__.py  _utils.py  filtering.py  preprocessing.py  radiomics.py  results.py
zrad/exec/: config.txt  feature_names_2D.txt
zrad/filtering/: __init__.py  base.py  factory.py  filtering.py  filtering_definitions.py  spatial.py  wavelet.py
zrad/gui/: _base_tab.py  filt_tab.py  prep_tab.py  rad_tab.py  toolbox_gui.py  visual_tab.py
zrad/hdbet/: config.py  hd-bet  network_architecture.py  paths.py  predict_case.py  run.py  utils.py
zrad/hdbet/HD_BET/: paths.py  run.py
zrad/input/: last_saved_filt_user_input.json  last_saved_user_prep_input.json
zrad/io/: __init__.py  dicom.py  nifti.py  pet_suv.py
zrad/logic/: __init__.py  exceptions.py  filtering.py  filtering_definitions.py  filters.py  image.py  preprocessing.py  radiomics.py  radiomics_defenitions.py  toolbox_logic.py
zrad/preprocessing/: __init__.py  discretization.py  interpolation.py  masks.py  pipeline.py  preprocessing.py  resegmentation.py  roi.py
zrad/radiomics/: __init__.py  base.py  extraction_context.py  extraction_preparation.py  extractor.py  feature_registry.py  glcm.py  gldzm.py  glrlm.py  glszm.py  intensity.py  morphology.py  ngldm.py  ngtdm.py  radiomics.py  radiomics_definitions.py  texture_aggregation.py  texture_base.py
zrad/visualization/: __init__.py  visualization.py
(+7 files in other folders)
